--- a/citycentre.html
+++ b/citycentre.html
@@ -8,25 +8,31 @@
 </head>
 <body>
     <div class="nav-bar">Welcome to the city centre</div>
+    <div class="menu">
+        <div class="language"><button>language</button></div>
+        <div class="driver-mode"><button>driver mode</button></div>
+        <div class="community-chat"><button>community chat</button></div>
+        <div class="emergency-services"><button>emergency services</button></div>
+    </div>
     <div class="main-content">
         <div class="traffic">
             <h2>Traffic</h2>
-            <button>Check Traffic</button>
+            <button class="traffic-button">Check Traffic</button>
         </div>
         <div class="weather">
             <h2>Weather</h2>
-            <button>Check Weather</button>
+            <button class="weather-button">Check Weather</button>
         </div>
         <div class="pollution">
             <h2>Pollution</h2>
-            <button>Check Pollution</button>
+            <button class="pollution-button">Check Pollution</button>
         </div>
         <div class="alert-section">
             <h2>Alert Section</h2>
-            <button>Check Alerts</button>
-            <button>traffic alert</button>
-            <button>mishap alert</button>
-            <button>calamity alert</button>
+            <button class="alert-button">Check Alerts</button>
+            <button class="traffic-alert">traffic alert</button>
+            <button class="mishap-alert">mishap alert</button>
+            <button class="calamity-alert">calamity alert</button>
 
         </div>
     </div>
