--- a/traffic.html
+++ b/traffic.html
@@ -3,51 +3,93 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traffic Finder</title>
-    <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_GOOGLE_MAPS_API_KEY&libraries=places"></script>
-
+    <title>Traffic Status</title>
     <style>
-        #map {
-            height: 500px;
-            width: 100%;
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f4f4f4;
+            padding: 20px;
+        }
+        input, button {
+            padding: 10px;
+            margin: 10px;
+            width: 250px;
+        }
+        #trafficResult {
+            margin-top: 20px;
+            padding: 20px;
+            background: white;
+            display: inline-block;
+            border-radius: 10px;
+            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
         }
     </style>
 </head>
 <body>
-    <input type="text" id="destination" placeholder="Enter Destination">
-    <button onclick="findTraffic()">Find Traffic</button>
-    <div id="map"></div>
+
+    <h2>Live Traffic Status</h2>
+    <input type="text" id="startCity" placeholder="Enter Start City">
+    <input type="text" id="endCity" placeholder="Enter Destination City">
+    <button id="getTraffic">Check Traffic</button>
+
+    <div id="trafficResult"></div>
 
     <script>
-        let map;
-        
-        function initMap() {
-            map = new google.maps.Map(document.getElementById("map"), {
-                center: { lat: 12.9716, lng: 77.5946 }, // Default: Bangalore
-                zoom: 12
-            });
+        const apiKey = "YOUR_API_KEY"; // Replace with your OpenRouteService API Key
 
-            // Add Traffic Layer
-            const trafficLayer = new google.maps.TrafficLayer();
-            trafficLayer.setMap(map);
-        }
+        document.getElementById('getTraffic').addEventListener('click', async function() {
+            const startCity = document.getElementById('startCity').value.trim();
+            const endCity = document.getElementById('endCity').value.trim();
 
-        function findTraffic() {
-            let destination = document.getElementById("destination").value;
-            const geocoder = new google.maps.Geocoder();
+            if (!startCity || !endCity) {
+                document.getElementById('trafficResult').innerHTML = `<p>Please enter both cities.</p>`;
+                return;
+            }
 
-            geocoder.geocode({ address: destination }, (results, status) => {
-                if (status === "OK") {
-                    let location = results[0].geometry.location;
-                    map.setCenter(location);
-                    new google.maps.Marker({ position: location, map: map });
-                } else {
-                    alert("Geocode was not successful: " + status);
+            try {
+                // Convert city names to lat/lon
+                const startCoords = await getCoordinates(startCity);
+                const endCoords = await getCoordinates(endCity);
+
+                if (!startCoords || !endCoords) {
+                    throw new Error("Could not find one or both locations.");
                 }
-            });
-        }
 
-        window.onload = initMap;
+                // Fetch traffic data
+                const url = `https://api.openrouteservice.org/v2/directions/driving-car?api_key=${apiKey}&start=${startCoords}&end=${endCoords}`;
+                const response = await fetch(url);
+                const data = await response.json();
+
+                if (data.error) {
+                    throw new Error(data.error.message);
+                }
+
+                const route = data.routes[0];
+                document.getElementById('trafficResult').innerHTML = `
+                    <h3>Route Details</h3>
+                    <p><strong>Distance:</strong> ${(route.summary.distance / 1000).toFixed(2)} km</p>
+                    <p><strong>Duration:</strong> ${(route.summary.duration / 60).toFixed(2)} min</p>
+                `;
+
+            } catch (error) {
+                document.getElementById('trafficResult').innerHTML = `<p>${error.message}</p>`;
+            }
+        });
+
+        // Function to get coordinates from city name using OpenStreetMap's Nominatim API
+        async function getCoordinates(city) {
+            const url = `https://nominatim.openstreetmap.org/search?format=json&q=${city}`;
+            const response = await fetch(url);
+            const data = await response.json();
+
+            if (data.length === 0) {  // Check if the array is empty
+                throw new Error("City not found. Please enter a valid city.");
+            }
+
+            return `${data[0].lon},${data[0].lat}`;
+        }
     </script>
+
 </body>
 </html>
