--- a/traffic.html
+++ b/traffic.html
@@ -2,94 +2,156 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Traffic Status</title>
+    <title>Traffic Status Checker</title>
     <style>
         body {
             font-family: Arial, sans-serif;
-            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
             background-color: #f4f4f4;
-            padding: 20px;
         }
-        input, button {
-            padding: 10px;
-            margin: 10px;
-            width: 250px;
+        #map {
+            height: 400px;
+            width: 100%;
+            margin-bottom: 20px;
         }
-        #trafficResult {
+        .traffic-info {
+            background-color: white;
+            border-radius: 5px;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+        }
+        #trafficStatus {
             margin-top: 20px;
-            padding: 20px;
-            background: white;
-            display: inline-block;
-            border-radius: 10px;
-            box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+        }
+        .status-item {
+            margin-bottom: 10px;
+            padding: 10px;
+            border-radius: 5px;
+        }
+        .high-traffic {
+            background-color: #ffdddd;
+            color: #ff0000;
+        }
+        .medium-traffic {
+            background-color: #fff4dd;
+            color: #ff9900;
+        }
+        .low-traffic {
+            background-color: #ddffdd;
+            color: #008000;
         }
     </style>
 </head>
 <body>
+    <div class="traffic-info">
+        <h1>Traffic Status Checker</h1>
+        <div id="map"></div>
+        <div id="trafficStatus"></div>
+    </div>
 
-    <h2>Live Traffic Status</h2>
-    <input type="text" id="startCity" placeholder="Enter Start City">
-    <input type="text" id="endCity" placeholder="Enter Destination City">
-    <button id="getTraffic">Check Traffic</button>
-
-    <div id="trafficResult"></div>
-
+    <script src="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.js"></script>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/leaflet@1.7.1/dist/leaflet.css"/>
     <script>
-        const apiKey = "YOUR_API_KEY"; // Replace with your OpenRouteService API Key
+        const API_KEY = '5b3ce3597851110001cf6248614c25b2d4e646c5bcca9de7f49043ff';
 
-        document.getElementById('getTraffic').addEventListener('click', async function() {
-            const startCity = document.getElementById('startCity').value.trim();
-            const endCity = document.getElementById('endCity').value.trim();
+        async function getTrafficStatus(coordinates) {
+            try {
+                const response = await fetch(`https://api.openrouteservice.org/v2/directions/driving-car?api_key=${API_KEY}&start=${coordinates[0].join(',')}&end=${coordinates[1].join(',')}`, {
+                    method: 'GET',
+                    headers: {
+                        'Accept': 'application/json, application/geo+json, application/gpx+xml, img/png; charset=utf-8'
+                    }
+                });
 
-            if (!startCity || !endCity) {
-                document.getElementById('trafficResult').innerHTML = `<p>Please enter both cities.</p>`;
-                return;
+                if (!response.ok) {
+                    throw new Error('Network response was not ok');
+                }
+
+                const data = await response.json();
+                return interpretTrafficData(data);
+            } catch (error) {
+                console.error('Error fetching traffic data:', error);
+                throw error;
             }
+        }
+
+        function interpretTrafficData(data) {
+            const duration = data.routes[0].summary.duration / 60; // Convert to minutes
+            const distance = data.routes[0].summary.distance / 1000; // Convert to kilometers
+
+            let trafficStatus = '';
+            let statusClass = '';
+
+            if (duration > 60) {
+                trafficStatus = 'High Traffic - Expect Significant Delays';
+                statusClass = 'high-traffic';
+            } else if (duration > 30) {
+                trafficStatus = 'Medium Traffic - Some Delays Expected';
+                statusClass = 'medium-traffic';
+            } else {
+                trafficStatus = 'Low Traffic - Smooth Travel';
+                statusClass = 'low-traffic';
+            }
+
+            return { duration, distance, trafficStatus, statusClass, route: data.routes[0] };
+        }
+
+        function initMap(coordinates) {
+            const map = L.map('map').setView([coordinates[0][1], coordinates[0][0]], 10);
+            L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png').addTo(map);
+            
+            // Add markers
+            coordinates.forEach(coord => {
+                L.marker([coord[1], coord[0]]).addTo(map);
+            });
+
+            return map;
+        }
+
+        function displayRoute(map, route) {
+            // Decode and draw the route
+            const coordinates = route.geometry.coordinates.map(coord => [coord[1], coord[0]]);
+            const polyline = L.polyline(coordinates, {color: 'blue', weight: 5, opacity: 0.7}).addTo(map);
+            
+            // Fit map to route
+            map.fitBounds(polyline.getBounds());
+        }
+
+        async function main() {
+            // Coordinates (converted to [longitude, latitude] format)
+            const coordinates = [
+                [73.0483, 19.2813],  // First point
+                [73.3709, 19.2696]   // Second point
+            ];
+
+            // Initialize map
+            const map = initMap(coordinates);
 
             try {
-                // Convert city names to lat/lon
-                const startCoords = await getCoordinates(startCity);
-                const endCoords = await getCoordinates(endCity);
+                // Get traffic info
+                const trafficInfo = await getTrafficStatus(coordinates);
 
-                if (!startCoords || !endCoords) {
-                    throw new Error("Could not find one or both locations.");
-                }
+                // Display route
+                displayRoute(map, trafficInfo.route);
 
-                // Fetch traffic data
-                const url = `https://api.openrouteservice.org/v2/directions/driving-car?api_key=${apiKey}&start=${startCoords}&end=${endCoords}`;
-                const response = await fetch(url);
-                const data = await response.json();
-
-                if (data.error) {
-                    throw new Error(data.error.message);
-                }
-
-                const route = data.routes[0];
-                document.getElementById('trafficResult').innerHTML = `
-                    <h3>Route Details</h3>
-                    <p><strong>Distance:</strong> ${(route.summary.distance / 1000).toFixed(2)} km</p>
-                    <p><strong>Duration:</strong> ${(route.summary.duration / 60).toFixed(2)} min</p>
+                // Display traffic status
+                const statusDiv = document.getElementById('trafficStatus');
+                statusDiv.innerHTML = `
+                    <div class="status-item ${trafficInfo.statusClass}">
+                        <strong>Traffic Status:</strong> ${trafficInfo.trafficStatus}<br>
+                        <strong>Travel Time:</strong> ${trafficInfo.duration.toFixed(1)} minutes<br>
+                        <strong>Distance:</strong> ${trafficInfo.distance.toFixed(1)} km
+                    </div>
                 `;
-
             } catch (error) {
-                document.getElementById('trafficResult').innerHTML = `<p>${error.message}</p>`;
+                console.error('Error:', error);
+                document.getElementById('trafficStatus').innerHTML = `<div class="status-item high-traffic">Unable to retrieve traffic information</div>`;
             }
-        });
-
-        // Function to get coordinates from city name using OpenStreetMap's Nominatim API
-        async function getCoordinates(city) {
-            const url = `https://nominatim.openstreetmap.org/search?format=json&q=${city}`;
-            const response = await fetch(url);
-            const data = await response.json();
-
-            if (data.length === 0) {  // Check if the array is empty
-                throw new Error("City not found. Please enter a valid city.");
-            }
-
-            return `${data[0].lon},${data[0].lat}`;
         }
-    </script>
 
+        main();
+    </script>
 </body>
 </html>
