--- a/citycentre.html
+++ b/citycentre.html
@@ -71,13 +71,16 @@
                         <h2>Alerts</h2>
                         <button class="card-action-btn alert-button">
                             Check All Alerts
-                            <i class="icon alert-icon"></i>
+                            <i class="icon arrow-icon"></i>
                         </button>
                     </div>
-                    <div class="alert-buttons">
-                        <button class="alert-type traffic-alert">Traffic Alert</button>
-                        <button class="alert-type mishap-alert">Mishap Alert</button>
-                        <button class="alert-type calamity-alert">Calamity Alert</button>
+                    <div class="card-background alert-bg"></div>
+                    <div class="card-overlay">
+                        <div class="alert-buttons">
+                            <button class="alert-type traffic-alert">Traffic Alert</button>
+                            <button class="alert-type mishap-alert">Mishap Alert</button>
+                            <button class="alert-type calamity-alert">Calamity Alert</button>
+                        </div>
                     </div>
                 </div>
             </div>
