--- a/community.html
+++ b/community.html
@@ -27,10 +27,10 @@
                 <div class="categories">
                     <h3>Categories</h3>
                     <ul>
-                        <li><a href="#">General Discussion</a></li>
-                        <li><a href="#">Help & Support</a></li>
+                        <li><a href="https://t.me/+ig2W4flFSfFiYTQ1">General Discussion</a></li>
                         <li><a href="#">Announcements</a></li>
                         <li><a href="#">Off-topic</a></li>
+                        <li><a href="#">Help & Support</a></li>
                     </ul>
                 </div>
             </div>
